@@ -282,6 +282,7 @@ error - Your ANSI C compiler should be defining __STDC__;
 #define BUILDER            160 /* Generic item builder, see subtypes */
 #define MATERIAL            161 /* Material for building */
 #define GPS                 162 /* Ground positionning system */
+#define ITEM_TRANSFORMER    163 /* Transforming one item with another */
 /* END TYPE DEFINE */
 
 /* Subtypes for BUILDER */
