@@ -44,6 +44,7 @@ void apply_lighter(object *who, object *lighter);
 void scroll_failure(object *op, int failure, int power);
 void apply_changes_to_player(object *pl, object *change);
 void apply_positioning_system(object *pl, object *gps);
+void apply_item_transformer( object* pl, object* transformer );
 /* attack.c */
 void cancellation(object *op);
 int did_make_save_item(object *op, int type, object *originator);
